<resources>
    <string name="app_name">Fotogram</string>
    <string name="benvenuto">Benvenuto!</string>
    <string name="log_in">Per favore accedi</string>
    <!--Footer-->
    <string name="bacheca">Bacheca</string>
    <string name="cerca">Cerca</string>
    <string name="nuovo">Nuovo</string>
    <string name="profilo">Profilo</string>
    <!--Profilo-->
    <string name="nome_utente">Nome Utente</string>
    <string name="cambia_propic">Cambia immagine</string>
    <string name="seguiti">Seguiti</string>
    <string name="seguaci">Seguaci</string>
    <string name="content">Contenuti</string>
    <!--Ricerca-->
    <string name="search_label">Cerca</string>
    <string name="search_hint">Cerca utenti...</string>
    <!--Others profile-->
    <string name="following">Stai seguendo</string>
    <string name="not_following">Inizia a seguire</string>
    <string name="follow_yourself">Non puoi seguire te stesso</string>
    <!--Misc-->
    <string name="didascalia_empty">Questo post è senza didascalia.</string>
    <string name="they_have_no_posts">L\'utente non ha ancora postato nulla</string>
    <string name="you_have_no_posts">Non hai ancora postato nulla</string>
    <string name="no_wall">Non ci sono ancora post. Fatti degli amici oppure inizia a postare qualche foto per vederle qui!</string>
    <string name="no_internet">Non sei connesso ad internet</string>

</resources>
