<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".com.example.utente.fragments.ProfiloFragment">

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <TextView
            android:id="@+id/label.seguaci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="45dp"
            android:text="@string/seguaci" />

        <TextView
            android:id="@+id/label.seguiti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="120dp"
            android:text="@string/seguiti" />

        <TextView
            android:id="@+id/txt.seguaci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="58dp"
            android:text="16"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt.seguiti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="@id/txt.seguiti"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="128dp"
            android:layout_marginTop="15dp"
            android:text="18"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn.change_profile_pic"
            android:layout_width="158dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="81dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/button_gray_outline"
            android:fontFamily="sans-serif"
            android:text="@string/cambia_propic"
            android:textAllCaps="false" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/img.profile_pic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_circle_indigo_a400_24dp" />

    <ImageButton
        android:id="@+id/btn.logout"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="190dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/exit_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt.username"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/nome_utente"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<ListView-->
    <!--android:id="@+id/listview.bacheca"-->
    <!--android:layout_width="411dp"-->
    <!--android:layout_height="383dp"-->
    <!--android:layout_marginBottom="57dp"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"></ListView>-->

</android.support.constraint.ConstraintLayout>
